cf_analysis_results/checkerframework_results/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8.txt
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/controllers/momcts/utils/SetOperation.java:228: error: (return) $$ 2 $$ @MustCallUnknown Double $$ @MustCall double $$ ( 5790, 5810 ) $$ incompatible types in return.
		else return (java.lang.Double) v;
		            ^
  type of expression: @MustCallUnknown Double
  method return type: @MustCall double
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/controllers/momcts/utils/TextOperation.java:33: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1140 $$ java.io.FileInputStream $$ possible exceptional exit due to dis.readFully(b) with exception type java.io.IOException $$ ( 959, 984 ) $$ @MustCall method close may not have been invoked on temp-var-1140 or any of its aliases.
          new DataInputStream(new FileInputStream(file));
                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to dis.readFully(b) with exception type java.io.IOException
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/controllers/momcts/utils/Logger.java:23: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1214 $$ java.io.FileWriter $$ regular method exit $$ ( 527, 558 ) $$ @MustCall method close may not have been invoked on temp-var-1214 or any of its aliases.
			fstream = new FileWriter(logFile, append);
			          ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/controllers/utils/SetOperation.java:224: error: (return) $$ 2 $$ @MustCallUnknown Double $$ @MustCall double $$ ( 5434, 5454 ) $$ incompatible types in return.
		else return (java.lang.Double) v;
		            ^
  type of expression: @MustCallUnknown Double
  method return type: @MustCall double
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/controllers/utils/TextOperation.java:33: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1971 $$ java.io.FileInputStream $$ possible exceptional exit due to dis.readFully(b) with exception type java.io.IOException $$ ( 952, 977 ) $$ @MustCall method close may not have been invoked on temp-var-1971 or any of its aliases.
          new DataInputStream(new FileInputStream(file));
                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to dis.readFully(b) with exception type java.io.IOException
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/controllers/utils/Logger.java:23: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2051 $$ java.io.FileWriter $$ regular method exit $$ ( 520, 551 ) $$ @MustCall method close may not have been invoked on temp-var-2051 or any of its aliases.
			fstream = new FileWriter(logFile, append);
			          ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/framework/utils/File2String.java:25: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2205 $$ java.io.FileInputStream $$ possible exceptional exit due to dis.readFully(b) with exception type java.io.IOException $$ ( 668, 693 ) $$ @MustCall method close may not have been invoked on temp-var-2205 or any of its aliases.
          new DataInputStream(new FileInputStream(file));
                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to dis.readFully(b) with exception type java.io.IOException
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/framework/core/Exec.java:246: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2501 $$ java.io.FileReader $$ possible exceptional exit due to in.readLine() with exception type java.io.IOException $$ ( 7699, 7725 ) $$ @MustCall method close may not have been invoked on temp-var-2501 or any of its aliases.
        BufferedReader in = new BufferedReader(new FileReader(a_filename));
                                               ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to in.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/wox/serial/Easy.java:25: error: (required.method.not.called) $$ 4 $$ method close $$ file $$ java.io.FileWriter $$ possible exceptional exit due to out.output(el, file) with exception type java.io.IOException $$ ( 671, 714 ) $$ @MustCall method close may not have been invoked on file or any of its aliases.
            FileWriter file = new FileWriter(filename);
                       ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to out.output(el, file) with exception type java.io.IOException
../../../../datasets/june2020_dataset/urld829b80034_wjch111_PTSP2013Wang_tgz-pJ8-controllers_momcts_momctsCore_TestPlannerJ8/src/wox/serial/Easy.java:37: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.InputStream $$ possible exceptional exit due to builder.build(is) with exception type org.jdom.JDOMException $$ ( 1058, 1105 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
            InputStream is = new FileInputStream(filename);
                        ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to builder.build(is) with exception type org.jdom.JDOMException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
